--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="icon" href="images/NA MU.png"
      type="image/x-icon">
-    <script src="./main.js" defer></script>
+    <script src="/src/main.js" defer></script>
   </head>
   <body class="body">
     <header class="header">
@@ -227,33 +227,5 @@
           <p> Designed by Zhyriada Marina</p>
         </div>
       </footer>
-      <script>
-      'use strict'
-      let modal;
-
-        function toggleModal(event) {
-          event.stopPropagation();
-          modal.classList.toggle('show');
-        }
-
-        function closeModal() {
-          modal.classList.remove('show');
-        }
-
-        document.addEventListener('DOMContentLoaded', function() {
-          modal = document.getElementById('modalMenu');
-          modal.addEventListener('click', closeModal);
-
-          const menuOpener = document.querySelector('.menu__opener');
-
-          menuOpener.addEventListener('click', toggleModal);
-        });
-
-        function sendForm() {
-          const subscribeTextarea = document.getElementById('subscribe');
-
-          subscribeTextarea.value = '';
-        };
-        </script>
   </body>
 </html>
