--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="icon" href="images/NA MU.png"
      type="image/x-icon">
-    <script src="/src/main.js" defer></script>
+    <script src="./scripts/main.js" defer></script>
   </head>
   <body class="body">
     <header class="header">
