--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,438 @@
+<!-- #region head -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+
+    <title>НАМУ</title>
+    <link
+      rel="icon"
+      href="../favicon.ico"
+      type="image/svg+xml"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <!-- #endregion -->
+
+  <body class="page__body">
+
+    <!-- #region header + menu -->
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+
+          <div class="container__header-bg">
+            <div class="header__image"></div>
+
+          </div>
+
+          <div class="header__top-bar">
+            <a href="#menu" class="top-bar__burger-menu icon icon--menu"></a>
+            <a href="#" class="top-bar__logo-link">
+              <img
+                src="images/logo.svg"
+                alt="NAMU"
+                class="top-bar__logo">
+            </a>
+          </div>
+
+
+          <div class="header__museum">
+            <h1 class="museum__title">Художній музей</h1>
+            <div class="museum__button">
+              <a href="#events" class="museum__tickets">
+                <span>Квитки</span>
+              </a>
+            </div>
+
+            <div class="museum__events">
+              <div class="museum__events-link">
+                <div class="museum__line"></div>
+                <a href="#events" class="museum__events-title">події</a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__container">
+
+        <div class="menu__mobile-view">
+          <div class="top-bar menu__top">
+            <a href="#" class="icon icon--close"></a>
+          </div>
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#gallery">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#events">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#follow">Про нас</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#contacts">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="menu__line"></div>
+
+
+        <div class="menu__contacts">
+          <div class="menu__schedule">
+            <h3 class="schedule__title">Графік роботи</h3>
+            <ul class="schedule__list">
+              <li class="schedule__item"><strong>12:00 — 20:00</strong> середа</li>
+              <li class="schedule__item"><strong>12:00 — 20:00</strong> четвер</li>
+              <li class="schedule__item"><strong>12:00 — 20:00</strong> п’ятниця</li>
+              <li class="schedule__item"><strong>11:00 — 19:00</strong> субота</li>
+              <li class="schedule__item"><strong>11:00 — 19:00</strong> неділя</li>
+            </ul>
+          </div>
+
+          <div class="menu__weekends">
+            <p class="menu__message">
+              <strong>Вихідні:</strong> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <!-- #endregion -->
+
+    <main class="main">
+
+      <!-- #region events -->
+      <div class="main__events events__container">
+        <section class="events" id="events">
+          <h2>Актуальні події</h2>
+
+          <div class="events__exhibitions">
+            <article class="event">
+              <img
+                src="images/events/events-img-1.png"
+                alt="Йду і повертаюсь"
+                class="event__photo"
+              >
+              <div class="event__info">
+                <h4 class="event__date">
+                  виставка
+                  <span>26.08-29.11.2019</span>
+                </h4>
+                <h3 class="event__title">Йду і повертаюсь
+                  <img
+                    src="images/icons/icon-red-square.svg"
+                    alt="Йду і повертаюсь"
+                    class="event__icon"
+                  >
+                </h3>
+                <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
+            </article>
+
+            <article class="event">
+              <img
+                src="images/events/events-img-2.png"
+                alt="І спогади і мрії"
+                class="event__photo"
+              >
+              <div class="event__info">
+                <h4 class="event__date">
+                  виставка
+                  <span>26.08-29.11.2019</span>
+                </h4>
+                <h3 class="event__title">І спогади і мрії
+                  <img
+                    src="images/icons/icon-red-square.svg"
+                    alt="І спогади і мрії"
+                    class="event__icon"
+                  >
+                </h3>
+                <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </article>
+          </div>
+        </section>
+      </div>
+
+      <div class="main__lection lection__container">
+        <section class="lection">
+          <article class="event__lection">
+            <div class="lection__photo"></div>
+            <div class="lection__info">
+              <h4 class="event__date event__date--lection">
+                лекція
+                <span>26/08/2019 - 11:00</span>
+              </h4>
+              <h3 class="event__title">Від класицизму до романтизму</h3>
+            </div>
+          </article>
+        </section>
+      </div>
+      <!-- #endregion -->
+
+      <!-- #region gallery -->
+      <section class="gallery" id="gallery">
+        <div class="gallery__container">
+          <h2 class="gallery__title">Галерея</h2>
+
+          <div class="gallery__wrapper">
+            <article class="gallery">
+              <div class="gallery__photos">
+                <a href="#gallery" class="gallery__link gallery__link--narrow">
+                  <img
+                    class="gallery__photo"
+                    src="images/gallery/gallery-1.png"
+                    alt="Ф. Кричевський - Наречена, 1910р"
+                  >
+                </a>
+
+                <a href="#gallery" class="gallery__link gallery__link--wide">
+                  <img
+                    class="gallery__photo"
+                    src="images/gallery/gallery-2.png"
+                    alt="П. Левченко - Глухомань (Село взимку)"
+                  >
+                </a>
+              </div>
+            </article>
+
+            <article class="gallery">
+              <div class="gallery__photos">
+                <a href="#gallery" class="gallery__link gallery__link--wide">
+                  <img
+                    class="gallery__photo"
+                    src="images/gallery/gallery-3.png"
+                    alt="Дівчина в парку"
+                  >
+                </a>
+
+                <a href="#gallery" class="gallery__link gallery__link--narrow">
+                  <img
+                    class="gallery__photo"
+                    src="images/gallery/gallery-4.png"
+                    alt="М. Глущенко - На морі, 1970"
+                  >
+                </a>
+              </div>
+            </article>
+          </div>
+
+          <div class="carousel-container">
+            <article class="gallery-carousel">
+              <div class="gallery__photos">
+                <div class="gallery__photo-container">
+                  <a
+                    href="#gallery"
+                    class="gallery__link gallery__link--carousel"
+                    data-slide="1"
+                  >
+                    <img
+                      src="images/gallery/gallery-1.png"
+                      alt="Image 1"
+                      class="gallery__photo gallery__photo--active"
+                      id="slide1"
+                    >
+                  </a>
+
+                  <a
+                    href="#gallery"
+                    class="gallery__link gallery__link--carousel"
+                    data-slide="2"
+                  >
+                    <img
+                      src="images/gallery/carusel-img-2.png"
+                      alt="Image 2"
+                      class="gallery__photo"
+                      id="slide2"
+                    >
+                  </a>
+
+                  <a
+                    href="#gallery"
+                    class="gallery__link gallery__link--carousel"
+                    data-slide="3"
+                  >
+                    <img
+                      src="images/gallery/gallery-1.png"
+                      alt="Image 3"
+                      class="gallery__photo"
+                      id="slide3"
+                    >
+                  </a>
+
+                  <a
+                    href="#gallery"
+                    class="gallery__link gallery__link--carousel"
+                    data-slide="4"
+                  >
+                    <img
+                      src="images/gallery/carusel-img-2.png"
+                      alt="Image 4"
+                      class="gallery__photo"
+                      id="slide4"
+                    >
+                  </a>
+                </div>
+              </div>
+
+              <div class="gallery__dots">
+                <span
+                  class="gallery__dot gallery__dot--active"
+                  onclick="currentSlide(1)"
+                  data-slide="1">
+                </span>
+                <span
+                  class="gallery__dot"
+                  onclick="currentSlide(2)"
+                  data-slide="2">
+                </span>
+                <span
+                  class="gallery__dot"
+                  onclick="currentSlide(3)"
+                  data-slide="3">
+                </span>
+                <span
+                  class="gallery__dot"
+                  onclick="currentSlide(4)"
+                  data-slide="4">
+                </span>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+
+      <!-- #region follow -->
+      <section class="follow" id="follow">
+        <div class="follow__container">
+          <div class="follow__content">
+            <div class="follow__title">
+              <h2 class="follow__name">Підписка</h2>
+              <p class="follow__slogan">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            </div>
+
+            <div class="follow__form">
+              <form action="post" class="follow__form-position">
+                <input
+                  type="email"
+                  class="follow__input"
+                  placeholder="E-mail"
+                  required
+                >
+                <button
+                  type="submit"
+                  class="follow__button"
+                >
+                  <span class="icon icon--follow"></span>
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+
+      <!-- #region contacts -->
+      <footer class="contacts" id="contacts">
+        <div class="contacts__container">
+          <div class="contacts__icons">
+            <img
+            src="images/logo.svg"
+            alt="NAMU"
+            class="contacts__logo"
+            >
+            <div class="contacts__social-media-links">
+              <a href="https://www.facebook.com/namu.museum/?locale=uk_UA" class="icon icon--fb"></a>
+              <a href="https://www.instagram.com/namu.museum/" class="icon icon--insta"></a>
+            </div>
+          </div>
+
+          <div class="contacts__schedule">
+            <h3 class="schedule__title">Графік роботи</h3>
+            <ul class="schedule__list">
+              <li class="schedule__item"><span>12:00 — 20:00</span> середа</li>
+              <li class="schedule__item"><span>12:00 — 20:00</span> четвер</li>
+              <li class="schedule__item"><span>12:00 — 20:00</span> п’ятниця</li>
+              <li class="schedule__item"><span>11:00 — 19:00</span> субота</li>
+              <li class="schedule__item"><span>11:00 — 19:00</span> неділя</li>
+            </ul>
+            <br>
+            <br>
+            <p class="contacts__message">
+              <span>Вихідні:</span> понеділок, вівторок
+              <br>Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="contacts__info">
+            <h3 class="schedule__title">Контакти</h3>
+
+            <a href="https://maps.app.goo.gl/gGsvGYVpAEoWohGp9" class="contacts__info-item">
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <a href="tel:+38 (044) 278-13-57" class="contacts__info-item">
+              тел. +38 (044) 278-13-57
+            </a>
+            <a href="fax:+38 (044) 278-74-54" class="contacts__info-item">
+              факс +38 (044) 278-74-54
+            </a>
+            <a href="mailto:“info@namu.kiev.ua”" class="contacts__info-item">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+
+          <div class="contacts__arrow-up">
+            <a href="#" class="contacts__arrow-up--link">
+              <img
+                src="images/icons/icon-arrow-up.svg"
+                alt="arrow-up"
+                class="contacts__arrow-up--img"
+              >
+            </a>
+          </div>
+
+          <div class="contacts__line"></div>
+
+          <nav class="nav contacts__nav">
+            <ul class="nav__list">
+              <li class="nav__item nav__item--footer">
+                <a class="nav__link nav__link--footer" href="#gallery">Галерея</a>
+              </li>
+              <li class="nav__item nav__item--footer">
+                <a class="nav__link nav__link--footer" href="#events">Виставки та події</a>
+              </li>
+              <li class="nav__item nav__item--footer">
+                <a class="nav__link nav__link--footer" href="#follow">Про нас</a>
+              </li>
+              <li class="nav__item nav__item--footer">
+                <a class="nav__link nav__link--footer" href="#contacts">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="contacts__copyright">
+          <div class="contacts__copyright-symbol">Copyright © 2019. All Rights Reserved.</div>
+          <div class="contacts__copyright-sign">Designed by Zhyriada Marina</div>
+        </div>
+      </footer>
+      <!-- #endregion -->
+    </main>
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
