--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <div class="header_first-block">
         <div class="header_logo">
-          <img src="images/logo.svg" onclick="toggleModal(event)" alt="logo" class="logo"/>
+          <img src="images/logo.svg" alt="logo" class="logo"/>
         </div>
         <div class="header_title">ХУДОЖНІЙ МУЗЕЙ</div>
         <div class="header_tickets-wrapper">
