--- a/src/index.html
+++ b/src/index.html
@@ -40,13 +40,13 @@
                 <img class="menu-cross" src="./images/cross.svg">
                 <div class="modal_content-div">
                     <div class="menu-group">
-                        <li><a class="modal_a" href="#compare" onclick="closeModal()">Галерея</a></li>
-                        <li><a class="modal_a" href="#about" onclick="closeModal()">Виставки та події</a></li>
+                        <li><a class="modal_a" href="#gallery" onclick="closeModal()">Галерея</a></li>
+                        <li><a class="modal_a" href="#actualevents" onclick="closeModal()">Виставки та події</a></li>
                     </div>
                 </div>
                 <div class="modal_content-div">
                     <div class="menu-group">
-                        <li><a class="modal_a" href="#details" onclick="closeModal()">Про нас</a></li>
+                        <li><a class="modal_a" href="#contacts" onclick="closeModal()">Про нас</a></li>
                         <li><a class="modal_a" href="#contacts" onclick="closeModal()">Контакти</a></li>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
       </div>
     </header>
     <main class="main">
-<article class="main_acutal-events">
+<article class="main_acutal-events" id="actualevents">
   <h1 class="main_title">Актуальні події</h1>
   <section class="main_event">
     <div class="main_event-wrapper1">
@@ -132,7 +132,7 @@
   </div>
 </div>
 </article>
-<article class="main_gallery">
+<article class="main_gallery" id="gallery">
   <section class="section2">
     <h1 class="main_title">Галерея</h1>
     <div class="section2_div">
@@ -161,7 +161,7 @@
       <button onclick="sendForm()" class="footer_subscribe-button"><img src="./images/chevron-right.svg"></button>
       </div>
     </main>
-      <footer class="footer">
+      <footer class="footer" id="contacts">
         <div class="footer_content">
           <div class="footer_block1">
             <div class="footer-logo">
