--- a/src/index.html
+++ b/src/index.html
@@ -214,12 +214,12 @@
           </div>
           <div class="footer-line"></div>
           <div class="footer_block4">
-            <a class="footer_contacts">Галерея</a>
-            <a style="margin-top: 20px; width: 169px;">Виставки та події</a>
+            <a href="#gallery" class="footer_contacts">Галерея</a>
+            <a href="#actualevents" style="margin-top: 20px; width: 169px;">Виставки та події</a>
           </div>
           <div class="footer_block5">
-            <a class="footer_contacts">Про нас</a>
-            <a style="margin-top: 20px">Контакти</a>
+            <a href="#contacts" class="footer_contacts">Про нас</a>
+            <a href="#contacts" style="margin-top: 20px">Контакти</a>
           </div>
         </div>
         <div class="footer_copyrights">
