--- a/src/index.html
+++ b/src/index.html
@@ -288,23 +288,22 @@
 
             <div class="gallery__dots">
               <span
-                class="gallery__dot gallery__dot--active"
-                onclick="currentSlide(1)"
+                class="gallery__dot gallery__dot--active gallery__dot--1"
+
                 data-slide="1">
               </span>
               <span
-                class="gallery__dot"
-                onclick="currentSlide(2)"
+                class="gallery__dot gallery__dot--2"
+
                 data-slide="2">
               </span>
               <span
-                class="gallery__dot"
-                onclick="currentSlide(3)"
+                class="gallery__dot gallery__dot--3"
+
                 data-slide="3">
               </span>
               <span
-                class="gallery__dot"
-                onclick="currentSlide(4)"
+                class="gallery__dot gallery__dot--4"
                 data-slide="4">
               </span>
             </div>
