--- a/src/index.html
+++ b/src/index.html
@@ -323,7 +323,11 @@
             </div>
 
             <div class="follow__form">
-              <form action="post" class="follow__form-position">
+              <form
+                action="post"
+                class="follow__form-position"
+                onsubmit="this.reset(); return false;"
+              >
                 <input
                   type="email"
                   class="follow__input"
