--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,7 @@
         </section>
       </div>
 
-      <div class="main__lection lection__container">
+      <div class="main__lection">
         <section class="lection">
           <article class="event__lection">
             <div class="lection__photo"></div>
