--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <div class="header_tickets-wrapper">
         <div class="header_tickets">
           <div></div>
-          <button class="header_tickets-text">Квитки</button>
+          <a href="#contacts" class="header_tickets-text">Квитки</a>
           <div></div>
           <div class="header_tickets-chevron"></div>
 
