fix bg and links

--- a/src/index.html
+++ b/src/index.html
@@ -108,6 +108,7 @@
           </div>
         </div>
       </div>
+      <div class="menu__overlay"></div>
     </aside>
     <!-- #endregion -->
 
@@ -357,8 +358,14 @@
             class="contacts__logo"
             >
             <div class="contacts__social-media-links">
-              <a href="https://www.facebook.com/namu.museum/?locale=uk_UA" class="icon icon--fb"></a>
-              <a href="https://www.instagram.com/namu.museum/" class="icon icon--insta"></a>
+              <a href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                target="_blank"
+                class="icon icon--fb">
+              </a>
+              <a href="https://www.instagram.com/namu.museum/"
+                target="_blank"
+                class="icon icon--insta">
+              </a>
             </div>
           </div>
 
