--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
     <header class="header">
       <div class="header_first-block">
         <div class="header_logo">
-            <img src="images/logo.svg" alt="logo" class="logo"/>
+            <img src="./images/chevron-right.svg" alt="logo" class="logo"/>
+            <img src="./images/chevron-right.svg" alt="logo" class="logo-chevron-hidden" style="display: none"/>
+            <img src="./images/cross.svg" alt="logo" class="logo-cross-hidden" style="display: none"/>
         </div>
         <div class="header_title">ХУДОЖНІЙ МУЗЕЙ</div>
         <div class="header_tickets-wrapper">
