--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,7 @@
     <header class="header">
       <div class="header_first-block">
         <div class="header_logo">
-            <img src="./images/chevron-right.svg" alt="logo" class="logo"/>
-            <img src="./images/chevron-right.svg" alt="logo" class="logo-chevron-hidden" style="display: none"/>
-            <img src="./images/cross.svg" alt="logo" class="logo-cross-hidden" style="display: none"/>
+            <img src="./images/logo.svg" alt="logo" class="logo"/>
         </div>
         <div class="header_title">ХУДОЖНІЙ МУЗЕЙ</div>
         <div class="header_tickets-wrapper">
@@ -35,7 +33,7 @@
     <div class="modal" id="modalMenu">
         <div class="modal--navigation">
             <a href="#" class="icon--close menu__opener" onclick="closeModal()"></a>
-            <!-- Добавлено изображение крестика -->
+            <img src="./images/cross.svg" alt="logo" class="logo cross">
         </div>
         <nav>
             <ul class="modal__content" style="max-width: 1280px; margin: 0 auto;">
