--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="header_title">ХУДОЖНІЙ МУЗЕЙ</div>
         <div class="header_tickets-wrapper">
-            <div class="header_tickets">
+            <div onclick="location.href='#contacts'" class="header_tickets">
                 <div></div>
                 <a href="#contacts" class="header_tickets-text">Квитки</a>
                 <div></div>
@@ -152,7 +152,7 @@
       <p class="footer_subscribe-subtitle">Бути в курсі всіх актуальних подій та останніх новин.</p>
       <div class="footer_subscribe-wrapper">
       <textarea class="footer_subscribe-textarea" id="subscribe" placeholder="Email"></textarea>
-      <button onclick="sendForm()" class="footer_subscribe-button"><img src="./images/chevron-right.svg"></button>
+      <button onclick="sendForm()" class="footer_subscribe-button"><img src="./images/chevron-right-black.svg"></button>
       </div>
     </main>
       <footer class="footer" style="width: 100%" id="contacts">
