--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             <img src="./images/cross.svg" alt="logo" class="logo cross">
         </div>
         <nav>
-            <ul class="modal__content" style="max-width: 1280px; margin: 0 auto;">
+            <ul class="modal__content" style="max-width: 1280px; margin: 0 auto; margin-top: 20px;">
                 <div class="modal_content-div">
                     <div class="menu-group">
                         <li><a class="modal_a" href="#gallery" onclick="closeModal()">Галерея</a></li>
