--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
     <script src="./scripts/main.js" defer></script>
   </head>
   <body class="body">
+
     <header class="header">
+      <div class="backdrop" id="backdrop"></div>
       <div class="header_first-block">
         <div class="header_logo">
             <img src="./images/logo.svg" alt="logo" class="logo"/>
