--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,14 @@
               </a>
   
               <div class="menu__wrap">
-                <a href="#gallary" class="menu__title"> Галерея </a>
+                <a href="#gallary" class="menu__title menu__title-link"> Галерея </a>
   
-                <a href="#events" class="menu__title"> Виставки та події </a>
+                <a href="#events" class="menu__title menu__title-link"> Виставки та події </a>
               </div>
               <div class="menu__wrap">
-                <a href="#" class="menu__title"> Про Нас </a>
+                <a href="#" class="menu__title menu__title-link"> Про Нас </a>
   
-                <a href="#" class="menu__title"> Контакти </a>
+                <a href="#" class="menu__title menu__title-link"> Контакти </a>
               </div>
             </div>
 
@@ -267,7 +267,9 @@
 
         <form
           method="get"
-          class="subscribe__form">
+          class="subscribe__form"
+          id="subscribeForm"
+          onsubmit="this.reset(); return false;">
           <input
             type="email"
             name="email"
@@ -296,11 +298,11 @@
               </a>
   
               <div class="footer__social">
-                <a href="#facebook.com">
+                <a href="https://www.facebook.com/namu.museum">
                   <img src="./icons/facebook.svg" alt="facebook">
                 </a>
   
-                <a href="#instagram.com">
+                <a href="https://www.instagram.com/namu.museum/">
                   <img src="./icons/instagram.svg" alt="instagram">
                 </a>
               </div>
@@ -327,8 +329,12 @@
               <p class="footer__title"> Контакти: </p>
 
               <p class="footer__text">
-                вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс +38 (044) 278-74-54 e-mail:
-                info@namu.kiev.ua
+                вул. М. Грушевського, 6; Київ, 01001 <br>
+                тел. <a class="footer__link" href="tel:+380442781357">+38 (044) 278-13-57</a> <br>
+                факс <a class="footer__link" href="tel:+380442787454">+38 (044) 278-74-54</a> <br>
+                e-mail:
+                <a class="footer__link" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+                
               </p>
             </div>
           </div>
