--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,382 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>National Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="icon"
+      type="imege/x-icon"
+      href="/src/images/Logo.svg"
+    >
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <div class="box-scroll">
+      <a href="#" class="scroll-up">
+        <img
+          src="../src/images/carbon_arrow-up.svg"
+          alt="arrow"
+          class="arrow-up"
+        >
+      </a>
+    </div>
+
+    <header class="header">
+      <div class="header__nav">
+        <a href="#menu" class="header__nav_link-menu">
+          <img
+            src="/src/images/burger-menu.svg"
+            alt="menu"
+            class="header__nav_link-menu_icone_menu icone"
+          >
+        </a>
+
+        <img
+          src="/src/images/Logo.svg"
+          alt="Logo national museum"
+        >
+      </div>
+      <img
+      src="../src/images/header-bg-img.png"
+      alt="header"
+      class="header__img"
+      >
+      <div class="header__content">
+        <h1 class="header__content_title">Художній музей</h1>
+        <a href="#contacts" class="header__content_link_contacts button-text">
+          <span class="header__content_link_contacts_text button-text">квитки</span>
+          <div class="header__content_link_contacts_box">
+            <img
+              src="/src/images/arrow-white.svg"
+              alt="arrow"
+              class="header__content_link_contacts_box_arrow icone"
+            >
+          </div>
+        </a>
+      </div>
+
+      <div class="header__menu" id="menu">
+        <div class="header__menu_nav">
+          <a href="#" class="header__menu_section_nav_close">
+            <img
+              src="/src/images/ri-close-fill.svg"
+              alt="close"
+              class="icone"
+            >
+          </a>
+          <ul class="header__menu_nav_list">
+            <li class="header__menu_nav_list_item ">
+              <a href="#galery" class="header__menu_nav_list_item_link menu-text-list">Галерея</a>
+            </li>
+            <li class="header__menu_nav_list_item ">
+              <a href="#main" class="header__menu_nav_list_item_link menu-text-list">Про Нас</a>
+            </li>
+            <li class="header__menu_nav_list_item ">
+              <a href="#main" class="header__menu_nav_list_item_link menu-text-list">Виставки та події</a>
+            </li>
+            <li class="header__menu_nav_list_item ">
+              <a href="#contacts" class="header__menu_nav_list_item_link menu-text-list">Контакти</a>
+            </li>
+          </ul>
+        </div>
+        <div class="header__menu_hr"></div>
+        <div class="header__menu_schedule">
+          <span class="header__menu_schedule_title schedule">Графік роботи</span>
+          <div class="header__menu_schedule_content text-menu">
+            <div class="header__menu_schedule_content_work">
+              <span class="header__menu_schedule_content_work_dey">
+                <span class="time">12:00 — 20:00</span> середа
+              </span>
+              <span class="header__menu_schedule_content_work_dey">
+                <span class="time">12:00 — 20:00</span> четвер
+              </span>
+              <span class="header__menu_schedule_content_work_dey">
+                <span class="time">12:00 — 20:00</span> п’ятниця
+              </span>
+              <span class="header__menu_schedule_content_work_dey">
+                <span class="time">11:00 — 19:00</span> субота
+              </span>
+              <span class="header__menu_schedule_content_work_dey">
+                <span class="time">11:00 — 19:00</span> неділя
+              </span>
+            </div>
+            <div class="header__menu_schedule_content_weekend text-menu">
+              <span class="time">Вихідні:</span> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main class="main" id="main">
+      <h2 class="main__title">Актуальні події</h2>
+      <div class="main__cards">
+        <section class="main__cards_card">
+          <img
+            src="/src/images/main-img01.png"
+            alt="Йду і повертаюсь"
+            class="main__cards_card_image main__cards_card_image--image01"
+          >
+          <div class="main__cards_card_description">
+            <div class="main__cards_card_description_header">
+              <span class="main__cards_card_description_header_title main-descr-title">Виставка</span>
+              <span class="main__cards_card_description_header_date main-descr-date">26.08-29.11.2019</span>
+            </div>
+            <div class="main__cards_card_description_content">
+              <h3 class="main__cards_card_description_content_title">Йду і повертаюсь <div class="coub"></div></h3>
+              <p class="main__cards_card_description_content_text main-descr-text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="main__cards_card">
+          <img
+          src="/src/images/main-img02.png"
+          alt="І спогади і мрії"
+          class="main__cards_card_image main__cards_card_image--image02"
+          >
+          <div class="main__cards_card_description">
+            <div class="main__cards_card_description_header">
+              <span class="main__cards_card_description_header_title main-descr-title">Виставка</span>
+              <span class="main__cards_card_description_header_date main-descr-date">26.08-29.11.2019</span>
+            </div>
+            <div class="main__cards_card_description_content">
+              <h3 class="main__cards_card_description_content_title">І спогади і мрії <div class="coub"></div></h3>
+              <p class="main__cards_card_description_content_text main-descr-text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="main__cards_card_last">
+          <img
+          src="/src/images/main-img03.png"
+          alt="І спогади і мрії"
+          class="main__cards_card_last_image main__cards_card_image--image03"
+          >
+          <div class="main__cards_card_last_description">
+            <div class="main__cards_card_last_description_header">
+              <span class="main__cards_card_last_description_header_title main-descr-title">Лекція</span>
+              <span class="main__cards_card_last_description_header_date main-descr-date">26/08/2019 - 11:00</span>
+            </div>
+            <h3 class="main__cards_card_last_title">Від класицизму до романтизму</h3>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <div class="galery" id="galery">
+      <h2 class="galery__title">Галерея</h2>
+      <section class="galery__slider">
+        <input
+        type="radio"
+        class="galery__slider_button button_nuv01"
+        name="button"
+        id="button_nuv01"
+        checked
+        >
+
+        <input
+          type="radio"
+          class="galery__slider_button button_nuv02"
+          name="button"
+          id="button_nuv02"
+        >
+
+        <input
+          type="radio"
+          class="galery__slider_button button_nuv03"
+          name="button"
+          id="button_nuv03"
+        >
+
+        <input
+          type="radio"
+          class="galery__slider_button button_nuv04"
+          name="button"
+          id="button_nuv04"
+        >
+
+        <div class="galery__slider_slid slide01">
+        </div>
+
+        <div class="galery__slider_slid slide02">
+        </div>
+
+        <div class="galery__slider_slid slide03">
+        </div>
+
+        <div class="galery__slider_slid slide04">
+        </div>
+
+      </section>
+
+      <div class="galery__nuv">
+        <label for="button_nuv01" class="galery__nuv_bur"></label>
+        <label for="button_nuv02" class="galery__nuv_bur"></label>
+        <label for="button_nuv03" class="galery__nuv_bur"></label>
+        <label for="button_nuv04" class="galery__nuv_bur"></label>
+      </div>
+    </div>
+
+    <div class="subscribe">
+      <div class="subscribe__description">
+        <h2 class="subscribe__description_title">Підписка</h2>
+        <span class="subscribe__description_text subscrib-text">Бути в курсі всіх актуальних подій та останніх новин.</span>
+      </div>
+      <div class="subscribe__buttom">
+        <form
+          action="#"
+          autocomplete="off"
+          class="form"
+          onsubmit="return off"
+        >
+          <input
+            type="email"
+            name="email"
+            placeholder="E-mail"
+            class="input--email"
+            id="email"
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+            required
+          >
+
+          <button
+            type="submit"
+            class="input--submit"
+            data-clear-selector="input[type='email']"
+            onclick="return false"
+          >
+            <img
+              src="../src/images/arrow-black.svg"
+              alt="arrow"
+              class="icone"
+            >
+          </button>
+        </form>
+
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="footer__head">
+        <a href="#" class="footer__head_link-logo">
+          <img
+            src="/src/images/Logo.svg"
+            alt="logo"
+            class="footer__head_link-logo_img-logo"
+          >
+        </a>
+        <div class="footer__head_social">
+          <a
+            href="https://www.facebook.com/?locale=ru_RU"
+            class="footer__head_social_link_fecbook"
+          >
+            <img
+              src="../src/images/facebook-icone.svg"
+              alt="facebook"
+              class="icone"
+            >
+          </a>
+
+          <a
+            href="https://www.instagram.com"
+            class="footer__head_social_link-instagram"
+          >
+            <img
+              src="../src/images/instagram-icone.svg"
+              alt="instagram"
+              class="icone"
+            >
+          </a>
+        </div>
+      </div>
+      <div class="footer__main">
+        <div class="footer__main_content">
+          <div class="footer__main_content_schedule footer-text-schedule">
+            <span class="footer__main_content_schedule_title footer-title-schedule-contacts ">Графік роботи</span>
+
+            <div class="footer__main_content_schedule_text_working">
+              <span class="footer__main_content_schedule_text_working_dey">
+                <span class="time">12:00 — 20:00</span> середа
+              </span>
+              <span class="footer__main_content_schedule_text_working_dey">
+                <span class="time">12:00 — 20:00</span> четвер
+              </span>
+              <span class="footer__main_content_schedule_text_working_dey">
+                <span class="time">12:00 — 20:00</span> п’ятниця
+              </span>
+              <span class="footer__main_content_schedule_text_working_dey">
+                <span class="time">11:00 — 19:00</span> субота
+              </span>
+              <span class="footer__main_content_schedule_text_working_dey">
+                <span class="time">11:00 — 19:00</span> неділя
+              </span>
+            </div>
+
+            <p class="footer__main_content_schedule_text_weekend">
+              Вихідні: понеділок, вівторок. Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+
+          <div class="footer__main_content_contacts footer-text-contacts">
+            <span class="footer__main_content_contacts_title" id="contacts">Контакти:</span>
+            <ul class="footer__main_content_contacts_list">
+              <li class="footer__main_content_contacts_list_item">
+                <a
+                  href="https://www.google.com/maps/@38.9869818,52.1256725,3z?hl=uk-UK&entry=ttu"
+                  class="footer__main_content_contacts_list_item_link"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+              </li>
+
+              <li class="footer__main_content_contacts_list_item">
+                <a
+                  href="tell:+38044278-13-57"
+                  class="footer__main_content_contacts_list_item_link"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
+              </li>
+
+
+              <li class="footer__main_content_contacts_list_item">
+                <a
+                  href="fax: +38044278-74-54"
+                  class="footer__main_content_contacts_list_item_link"
+                >
+                  факс +38 (044) 278-74-54
+                </a>
+              </li>
+
+
+              <li class="footer__main_content_contacts_list_item">
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="footer__main_content_contacts_list_item_link"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </li>
+
+            </ul>
+          </div>
+        </div>
+        <div class="hr"></div>
+        <div class="footer__main_nav footer-nav-text">
+          <a href="#galery" class="footer__main_nav_link footer__main_nav_galery">Галерея</a>
+          <a href="#main" class="footer__main_nav_link footer__main_nav_about-us">Про Нас</a>
+          <a href="#main" class="footer__main_nav_link footer__main_nav_events">Виставки та події</a>
+          <a href="#contact" class="footer__main_nav_link footer__main_nav_contact">Контакти</a>
+        </div>
+      </div>
+      <div class="footer__bottom footer-bottom-text">
+        <span class="footer__bottom_designed">Designed by Zhyriada Marina</span>
+        <span class="footer__bottom_copyright">Copyright © 2019. All Rights Reserved.</span>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
