--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
         <img
           src="/src/images/Logo.svg"
           alt="Logo national museum"
+          class="header__nav_img-logo"
         >
       </div>
       <img
@@ -271,6 +272,7 @@
           <a
             href="https://www.facebook.com/?locale=ru_RU"
             class="footer__head_social_link_fecbook"
+            target="_blank"
           >
             <img
               src="../src/images/facebook-icone.svg"
@@ -282,6 +284,7 @@
           <a
             href="https://www.instagram.com"
             class="footer__head_social_link-instagram"
+            target="_blank"
           >
             <img
               src="../src/images/instagram-icone.svg"
