ready solution layout Museum

--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
       <section class="header__content">
         <h1 class="header__tytle">Художній<br>музей</h1>
 
-        <a class="header__button" href="#">
+        <a class="header__button" href="#exhibitions">
           <h2 class="header__button--tytle">Квитки</h2>
         </a>
 
@@ -308,17 +308,18 @@
           <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
         </div>
 
-        <div class="subscription__input">
+        <form class="subscription__form" onsubmit="this.reset(); return false">
 
           <input
-            class="subscription__input--input"
+            class="subscription__form--input"
             id="email"
             type="email"
             placeholder="E-mail"
             required
           >
-          <label class="subscription__input--label" for="email"></label>
-        </div>
+
+          <button class="subscription__form--btn" type="submit"></button>
+        </form>
       </section>
     </main>
 
@@ -330,7 +331,7 @@
 
         <div class="footer__box">
 
-          <a href="https://www.facebook.com/" target="_blank">
+          <a href="https://www.facebook.com/namu.museum/" target="_blank">
             <img
               class="icon"
               src="../src/icons/facebook-icon.svg"
@@ -338,7 +339,7 @@
             >
           </a>
 
-          <a href="https://www.instagram.com/" target="_blank">
+          <a href="https://www.instagram.com/namu.museum/" target="_blank">
             <img
               class="icon"
               src="../src/icons/instagram-icon.svg"
@@ -357,13 +358,34 @@
 
           <p class="footer__content--subtitle">Контакти:</p>
 
-          <p>
-            вул. М. Грушевського, 6; Київ, 01001
-            тел. +38 (044) 278-13-57
-            факс +38 (044) 278-74-54
-            e-mail: info@namu.kiev.ua
-          </p>
+          <div class="footer__block-contact-us--box">
 
+            <a
+              class="footer__block-contact-us--link"
+              href="https://maps.app.goo.gl/NezgiB85pSvvibt56"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; <br> Київ, 01001
+            </a>
+
+            <br>
+
+            <a class="footer__block-contact-us--link" href="tel:+38 (044) 278-13-57">
+              тел. +38 (044) 278-13-57
+            </a>
+
+            <br>
+
+            <a class="footer__block-contact-us--link" href="tel:+38 (044) 278-74-54">
+              факс +38 (044) 278-74-54
+            </a>
+
+            <br>
+
+            <a class="footer__block-contact-us--link" href="mailto:info@namu.kiev.ua">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
         </article>
       </section>
 
