--- a/src/index.html
+++ b/src/index.html
@@ -19,16 +19,17 @@
 
         <section class="burger-menu__box">
 
-          <a class="burger-menu__close" href="#">
+          <a class="burger-menu__icon icon" href="#">
             <img
-              class="burger-menu__icon icon"
+              class="burger-menu__close"
               src="./icons/ri-close-fill.svg"
               alt="close"
             >
           </a>
 
           <nav class="menu" id="menu">
-            <lu class="menu__list">
+
+            <ul class="menu__list">
 
               <li class="menu__item">
                 <a class="menu__link" href="#gallery">Галерея</a>
@@ -45,7 +46,7 @@
               <li class="menu__item">
                 <a class="menu__link" href="#footer">Контакти</a>
               </li>
-            </lu>
+            </ul>
           </nav>
         </section>
 
@@ -109,9 +110,9 @@
 
       </aside>
 
-      <a class="header__burger-menu" href="#burger-menu">
+      <a class="header__burger-menu icon" href="#burger-menu">
         <img
-          class="icon"
+
           src="./icons/baseline-menu.svg"
           alt="menu"
         >
@@ -315,7 +316,7 @@
             id="email"
             type="email"
             placeholder="E-mail"
-            required
+            autocomplete="off"
           >
 
           <button class="subscription__form--btn" type="submit"></button>
