--- a/src/index.html
+++ b/src/index.html
@@ -232,6 +232,7 @@
         <div class="contacts__content">
           <div class="contacts__logoes">
             <a href="#" class="contacts__logo">NA<br>MU</a>
+
             <div class="contacts__soccial">
               <a href="https://www.facebook.com/" class="contacts__soc-link">
                 <img
@@ -240,6 +241,7 @@
                   class="contacts__soc-item"
                 >
               </a>
+
               <a href="https://www.instagram.com/" class="contacts__soc-link">
                 <img
                   src="./images/icons/instagram.png"
@@ -249,23 +251,45 @@
               </a>
             </div>
           </div>
+
           <div class="contacts__info">
             <div class="contacts__schedule">
               <p class="contacts__schedule-name">Графік роботи</p>
+
               <ul class="contacts__schedule-list">
                 <li class="contacts__schedule-item"><span class="contacts__schedule-item-name">12:00 — 20:00 </span>середа</li>
+
                 <li class="contacts__schedule-item"><span class="contacts__schedule-item-name">12:00 — 20:00 </span>четвер</li>
+
                 <li class="contacts__schedule-item"><span class="contacts__schedule-item-name">12:00 — 20:00 </span>п’ятниця</li>
+
                 <li class="contacts__schedule-item"><span class="contacts__schedule-item-name">11:00 — 19:00 </span>субота</li>
+
                 <li class="contacts__schedule-item"><span class="contacts__schedule-item-name">11:00 — 19:00 </span>неділя</li>
               </ul>
+
               <p class="contacts__schedule-wickend"><span class="contacts__schedule-wickend-name">Вихідні</span>: понеділок, вівторок<br>Каса припиняє роботу за 1 годину до закриття музею</p>
             </div>
+
             <div class="contacts__contact">
               <p class="contacts__contact-name">Контакти:</p>
-              <p class="contacts__contact-description">вул. М. Грушевського, 6; Київ, 01001<br>тел. +38 (044) 278-13-57<br>факс +38 (044) 278-74-54<br>e-mail: info@namu.kiev.ua</p>
+
+              <p class="contacts__contact-description">
+                <a
+                  href="https://www.google.com/maps/place/%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9+%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%BD%D1%96%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8/@50.4493469,30.5305587,20z/data=!4m15!1m8!3m7!1s0x40d4ce52445a8315:0x5e30ef474eddac89!2z0LLRg9C70LjRhtGPINCc0LjRhdCw0LnQu9CwINCT0YDRg9GI0LXQstGB0YzQutC-0LPQviwgNiwg0JrQuNGX0LIsIDAyMDAw!3b1!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx!3m5!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4494274!4d30.5306505!16s%2Fm%2F02prqms?entry=ttu"
+                  class="contacts__contact-link"
+                  target="_blank"
+                >вул. М. Грушевського, 6; Київ, 01001</a>
+
+                <a href="tel:+38 (044) 278-13-57" class="contacts__contact-link">тел. +38 (044) 278-13-57</a>
+
+                <a href="tel:+38 (044) 278-74-54" class="contacts__contact-link">факс +38 (044) 278-74-54</a>
+                
+                <a href="mailto:info@namu.kiev.ua" class="contacts__contact-link">e-mail: info@namu.kiev.ua</a>
+              </p>
             </div>
           </div>
+
           <div class="icon__go-top"><a href="#" class="icon__go-top-link"></a></div>
         </div>
 
