--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,57 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA MU</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/NA MU.svg">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
+    <header class="header">
+      <aside class="page__menu menu" id="menu">
+        <a href="#" class="icon icon--close"></a>
+        <nav>
+          <ul>
+            <li>Галерея</li>
+            <li>Виставки та події</li>
+            <li>Про Нас</li>
+            <li>Контакти</li>
+          </ul>
+        </nav>
+
+        <div class="menu__line"></div>
+
+        <section class="hours">
+          <ul>
+            <li>12:00 — 20:00 середа</li>
+            <li>12:00 — 20:00 четвер</li>
+            <li>12:00 — 20:00 п'ятниця</li>
+            <li>12:00 — 19:00 субота</li>
+            <li>12:00 — 19:00 неділя</li>
+          </ul>
+        </section>
+      </aside>
+
+      <section class="header__photo"></section>
+
+      <section class="header__top container">
+        <a href="#menu" class="icon icon--menu"></a>
+        <a href="#" class="icon icon--logo"></a>
+      </section>
+
+      <section class="header__communication container">
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+        <div class="header__events">Події</div>
+
+        <button class="header__button">
+          <span class="header__buy">Квитки</span>
+          <div class="arrow arrow--header"></div>
+        </button>
+      </section>
+    </header>
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
