--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,30 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="container">
+        <div class="header__top-bar top-bar">
+          <a href="#menu" class="top-bar__menu icon icon-menu"></a>
+          <a href="#" class="top-bar__logo logo"></a>
+        </div>
+      </div>
+      <div class="header__bg"></div>
+      <div class="container">
+        <div class="header__content">
+          <h1 class="header__title">Художній музей</h1>
+          <a href="#" class="header__btn">Квитки</a>
+        </div>
+      </div>
+    </header>
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
