--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,10 @@
       <div class="container">
         <div class="header__content">
           <h1 class="header__title">Художній музей</h1>
-          <a href="#" class="header__btn">Квитки</a>
+          <a href="#" class="header__btn">
+            <span class="btn-text">Квитки</span>
+            <span class="arrow"></span>
+          </a>
         </div>
       </div>
     </header>
