correct top link

--- a/src/index.html
+++ b/src/index.html
@@ -282,7 +282,9 @@
         </p>
       </section>
 
-      <div class="move-top"><a href="#header" class="move-top"></a></div>
+      <div class="move-top">
+        <a href="#header" class="move-top--a"></a>
+      </div>
 
       <div class="footer__line"></div>
 
