--- a/src/index.html
+++ b/src/index.html
@@ -10,54 +10,59 @@
   </head>
   <body class="page">
     <header class="header" id="header">
-      <aside class="page__menu menu container" id="menu">
-        <nav class="menu__nav">
-          <a href="#" class="icon icon--close"></a>
-          <ul class="menu__ul">
-            <div class="menu__left">
-              <li class="menu__list">
-                <a href="#" class="menu__link">Галерея</a>
-              </li>
-              <li class="menu__list">
-                <a href="#" class="menu__link">Виставки та події</a>
-              </li>
-            </div>
-            <div class="menu__right">
-              <li class="menu__list">
-                <a href="#" class="menu__link">Про Нас</a>
-              </li>
-              <li class="menu__list">
-                <a href="#" class="menu__link">Контакти</a>
-              </li>
-            </div>
-          </ul>
-        </nav>
-        <div class="menu__line"></div>
-        <section class="hours">
-          <div class="hours__work">
-            <span class="hours__shedule">Графік роботи</span>
-            <ul class="hours__ul">
-              <li class="hours__list">
-                <span class="hours__time">12:00 — 20:00</span> середа
-              </li>
-              <li class="hours__list">
-                <span class="hours__time">12:00 — 20:00</span> четвер
-              </li>
-              <li class="hours__list">
-                <span class="hours__time">12:00 — 20:00</span> п'ятниця
-              </li>
-              <li class="hours__list">
-                <span class="hours__time">12:00 — 19:00</span> субота
-              </li>
-              <li class="hours__list">
-                <span class="hours__time">12:00 — 19:00</span> неділя
-              </li>
+      <aside class="page__menu menu" id="menu">
+        <div class="menu__green container">
+          <nav class="menu__nav">
+            <a href="#" class="icon icon--close"></a>
+            <ul class="menu__ul">
+              <div class="menu__left">
+                <li class="menu__list">
+                  <a href="#gallery" class="menu__link">Галерея</a>
+                </li>
+                <li class="menu__list">
+                  <a href="#events" class="menu__link">Виставки та події</a>
+                </li>
+              </div>
+              <div class="menu__right">
+                <li class="menu__list">
+                  <a href="#header" class="menu__link">Про Нас</a>
+                </li>
+                <li class="menu__list">
+                  <a href="#contacts" class="menu__link">Контакти</a>
+                </li>
+              </div>
             </ul>
-          </div>
-          <div class="hours__holiday">
-            <span class="hours__time">Вихідні:</span> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
-          </div>
-        </section>
+          </nav>
+
+          <div class="menu__line"></div>
+
+          <section class="hours">
+            <div class="hours__work">
+              <span class="hours__shedule">Графік роботи</span>
+              <ul class="hours__ul">
+                <li class="hours__list">
+                  <span class="hours__time">12:00 — 20:00</span> середа
+                </li>
+                <li class="hours__list">
+                  <span class="hours__time">12:00 — 20:00</span> четвер
+                </li>
+                <li class="hours__list">
+                  <span class="hours__time">12:00 — 20:00</span> п'ятниця
+                </li>
+                <li class="hours__list">
+                  <span class="hours__time">12:00 — 19:00</span> субота
+                </li>
+                <li class="hours__list">
+                  <span class="hours__time">12:00 — 19:00</span> неділя
+                </li>
+              </ul>
+            </div>
+            <div class="hours__holiday">
+              <span class="hours__time">Вихідні:</span> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+            </div>
+          </section>
+        </div>
+        <div class="menu__dark"></div>
       </aside>
 
       <section class="header__photo"></section>
@@ -80,7 +85,7 @@
     </header>
 
     <main class="main">
-      <section class="events">
+      <section class="events" id="events">
         <h2 class="events__title container">Актуальні події</h2>
 
         <article class="card container">
@@ -132,29 +137,29 @@
         </article>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <h2 class="gallery__title container">Галерея</h2>
         <div class="gallery__slider">
           <div class="slides">
             <input
               type="radio"
               name="radio-btn"
-              class="radio1"
+              id="radio1"
             >
             <input
               type="radio"
               name="radio-btn"
-              class="radio2"
+              id="radio2"
             >
             <input
               type="radio"
               name="radio-btn"
-              class="radio3"
+              id="radio3"
             >
             <input
               type="radio"
               name="radio-btn"
-              class="radio4"
+              id="radio4"
             >
             <img
               src="./images/gallery/woman.png"
@@ -235,12 +240,12 @@
       </section>
     </main>
 
-    <footer class="footer container">
+    <footer class="footer container" id="contacts">
       <aside class="footer__links">
         <a href="#" class="icon icon--logo icon--footer"></a>
         <div class="footer__social">
-          <a href="#" class="icon icon--facebook"></a>
-          <a href="#" class="icon icon--instagram"></a>
+          <a href="https://www.facebook.com/" class="icon icon--facebook"></a>
+          <a href="https://www.instagram.com/" class="icon icon--instagram"></a>
         </div>
       </aside>
 
@@ -274,11 +279,19 @@
       <section class="address">
         <div class="address__title">Контакти:</div>
         <p class="address__contacts">
-          вул. М. Грушевського, 6; <br>
+          <a href="https://maps.app.goo.gl/ivdASr8uRL8eDj9P7" class="address__link">
+            вул. М. Грушевського, 6;
+          </a> <br>
           Київ, 01001 <br>
-          тел. +38 (044) 278-13-57 <br>
-          факс +38 (044) 278-74-54 <br>
-          e-mail: info@namu.kiev.ua
+          <a href="tel:+38 (044) 278-13-57" class="address__link">
+            тел. +38 (044) 278-13-57
+          </a> <br>
+          <a href="tel:+38 (044) 278-74-54" class="address__link">
+            факс +38 (044) 278-74-54
+          </a> <br>
+          <a href="mail:info@namu.kiev.ua" class="address__link">
+            e-mail: info@namu.kiev.ua
+          </a>
         </p>
       </section>
 
@@ -292,19 +305,19 @@
         <ul class="menu__ul menu__ul--footer">
           <div class="menu__left menu__left--footer">
             <li class="menu__list">
-              <a href="#" class="menu__link menu__link--footer">Галерея</a>
+              <a href="#gallery" class="menu__link menu__link--footer">Галерея</a>
             </li>
             <li class="menu__list">
-              <a href="#" class="menu__link menu__link--footer">Виставки та події</a>
+              <a href="#events" class="menu__link menu__link--footer">Виставки та події</a>
             </li>
           </div>
 
           <div class="menu__right menu__right--footer">
             <li class="menu__list">
-              <a href="#" class="menu__link menu__link--footer">Про Нас</a>
+              <a href="#header" class="menu__link menu__link--footer">Про Нас</a>
             </li>
             <li class="menu__list">
-              <a href="#" class="menu__link menu__link--footer">Контакти</a>
+              <a href="#contacts" class="menu__link menu__link--footer">Контакти</a>
             </li>
           </div>
         </ul>
