develop menu and header

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.scss">
   </head>
+
   <body>
     <header class="header">
       <div class="container">
@@ -25,11 +29,71 @@
             <span class="btn-text">Квитки</span>
             <span class="arrow"></span>
           </a>
+          <a href="#" class="header__events">Події</a>
         </div>
       </div>
     </header>
 
+    <aside class="menu" id="menu">
+      <div class="menu__wrapper">
+        <div class="container">
+          <div class="menu__content">
+            <div class="menu__top">
+              <a href="#" class="menu__icon icon icon-close"></a>
+
+              <nav class="menu__nav nav">
+                <ul class="nav__items">
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">Галерея</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">Про Нас</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">Виставки та події</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+
+            <div class="menu__bottom">
+              <div class="menu__work">
+                <h5 class="menu__title">Графік роботи</h5>
+
+                <ul class="menu__items">
+                  <li class="menu__item">
+                    <strong>12:00 — 20:00</strong> середа
+                  </li>
+                  <li class="menu__item">
+                    <strong>12:00 — 20:00</strong> четвер
+                  </li>
+                  <li class="menu__item">
+                    <strong>12:00 — 20:00</strong> п’ятниця
+                  </li>
+                  <li class="menu__item">
+                    <strong>11:00 — 19:00</strong> субота
+                  </li>
+                  <li class="menu__item">
+                    <strong>11:00 — 19:00</strong> неділя
+                  </li>
+                </ul>
+              </div>
+
+              <p class="menu__weekend">
+                <strong>Вихідні:</strong> понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годинудо закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
+
 </html>
