correct scroll bug

--- a/src/index.html
+++ b/src/index.html
@@ -144,22 +144,22 @@
             <input
               type="radio"
               name="radio-btn"
-              id="radio1"
+              class="radio1"
             >
             <input
               type="radio"
               name="radio-btn"
-              id="radio2"
+              class="radio2"
             >
             <input
               type="radio"
               name="radio-btn"
-              id="radio3"
+              class="radio3"
             >
             <input
               type="radio"
               name="radio-btn"
-              id="radio4"
+              class="radio4"
             >
             <img
               src="./images/gallery/woman.png"
