--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,31 @@
         </div>
       </section>
 
-      
+      <section class="subscribe" id="subscribe">
+        <div class="container">
+          <div class="subscribe__content">
+            <h3 class="subscribe__title">Підписка</h3>
+            <p class="subscribe__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              action="URL"
+              class="subscribe__form"
+              autocomplete="off"
+            >
+              <input
+                class="subscribe__input"
+                type="email"
+                name="email"
+                id="email"
+                required
+                placeholder="Email"
+              >
+              <button class="subscribe__btn" type="submit"></button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
 
