--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header" id="header">
       <div class="container">
         <div class="header__top-bar top-bar">
           <a href="#menu" class="top-bar__menu icon icon-menu"></a>
@@ -47,13 +47,13 @@
                     <a href="#gallery" class="nav__link">Галерея</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#" class="nav__link">Про Нас</a>
+                    <a href="#header" class="nav__link">Про Нас</a>
                   </li>
                   <li class="nav__item">
                     <a href="#events" class="nav__link">Виставки та події</a>
                   </li>
                   <li class="nav__item">
-                    <a href="#" class="nav__link">Контакти</a>
+                    <a href="#footer" class="nav__link">Контакти</a>
                   </li>
                 </ul>
               </nav>
@@ -196,6 +196,93 @@
       </section>
     </main>
 
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__top">
+            <a class="footer__logo logo logo-black" href="#"></a>
+            <div class="footer__social">
+              <a
+                href="https://uk-ua.facebook.com/"
+                class="footer__link icon icon-facebook"
+                target="_blank"
+              ></a>
+              <a
+                href="https://www.instagram.com/"
+                class="footer__link icon icon-instagram"
+                target="_blank"
+              ></a>
+            </div>
+          </div>
+          <div class="footer__info">
+            <div class="footer__schedule">
+              <div class="footer__work">
+                <h5 class="footer__title">Графік роботи</h5>
+                <ul class="footer__items">
+                  <li class="footer__item">
+                    <strong>12:00 — 20:00</strong> середа
+                  </li>
+                  <li class="footer__item">
+                    <strong>12:00 — 20:00</strong> четвер
+                  </li>
+                  <li class="footer__item">
+                    <strong>12:00 — 20:00</strong> п’ятниця
+                  </li>
+                  <li class="footer__item">
+                    <strong>11:00 — 19:00</strong> субота
+                  </li>
+                  <li class="footer__item">
+                    <strong>11:00 — 19:00</strong> неділя
+                  </li>
+                </ul>
+              </div>
+              <p class="footer__weekend">
+                Вихідні: понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+            <div class="footer__contacts">
+              <h5 class="footer__title">Контакти:</h5>
+              <ul class="footer__items">
+                <li class="footer__item">
+                  <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?entry=ttu" target="_blank">вул. М. Грушевського, 6; Київ, 01001</a>
+                </li>
+                <li class="footer__item">
+                  <a href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
+                </li>
+                <li class="footer__item">
+                  <a href="tel:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a>
+                </li>
+                <li class="footer__item">
+                  <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+                </li>
+              </ul>
+            </div>
+            <a href="#header" class="footer__btn-top"></a>
+          </div>
+          <nav class="footer-nav">
+            <ul class="footer-nav__items">
+              <li class="footer-nav__item">
+                <a href="#gallery" class="footer-nav__link">Галерея</a>
+              </li>
+              <li class="footer-nav__item">
+                <a href="#header" class="footer-nav__link">Про Нас</a>
+              </li>
+              <li class="footer-nav__item">
+                <a href="#events" class="footer-nav__link">Виставки та події</a>
+              </li>
+              <li class="footer-nav__item">
+                <a href="#footer" class="footer-nav__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="footer__copy">
+            <p>Designed by Zhyriada Marina</p>
+            <p>Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
