fix menu, add header  element

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,9 @@
           <div class="art-museum__content">
             <h1 class="art-museum__title title-font">ХУДОЖНІЙ МУЗЕЙ</h1>
             <a href="#" class="art-museum__button">Квитки</a>
+            <div class="art-museum__add">
+              <a href="#events" class="art-museum__event">Події</a>
+            </div>
           </div>
         </div>
       </div>
@@ -41,39 +44,41 @@
 
     <aside id="menu" class="menu">
       <div class="menu__container">
-        <nav class="menu__navigation">
-          <a href="#" class="menu__icon-close"></a>
-          <ul class="menu__list menu__list--navigation">
-            <li class="menu__item">
-              <a href="#gallery" class="menu__link after">Галерея</a>
-            </li>
-            <li class="menu__item">
-              <a href="#subscribe" class="menu__link after">Про нас</a>
-            </li>
-            <li class="menu__item">
-              <a href="#events" class="menu__link after">Виставки та події</a>
-            </li>
-            <li class="menu__item">
-              <a href="#contacts" class="menu__link after">Контакти</a>
-            </li>
-          </ul>
-        </nav>
-        <nav class="menu__schedule">
-          <div class="menu__schedule-main">
-            <p class="menu__schedule-title">Графік роботи</p>
-            <ul class="menu__list menu__list--schedule">
-              <li class="menu__item"><span class="menu__bold">12:00— 20:00</span> <br> середа</li>
-              <li class="menu__item"><span class="menu__bold">12:00— 20:00</span> <br> четвер</li>
-              <li class="menu__item"><span class="menu__bold">12:00 — 20:00</span> <br> п’ятниця</li>
-              <li class="menu__item"><span class="menu__bold">11:00 — 19:00</span> <br> субота</li>
-              <li class="menu__item"><span class="menu__bold">11:00 — 19:00</span> <br>неділя</li>
+        <div class="menu__content">
+          <nav class="menu__navigation">
+            <a href="#" class="menu__icon-close"></a>
+            <ul class="menu__list menu__list--navigation">
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link after">Галерея</a>
+              </li>
+              <li class="menu__item">
+                <a href="#subs" class="menu__link after">Про Нас</a>
+              </li>
+              <li class="menu__item">
+                <a href="#events" class="menu__link after">Виставки та події</a>
+              </li>
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link after">Контакти</a>
+              </li>
             </ul>
-          </div>
-          <p class="menu__day-off">
-            <span class="menu__bold">Вихідні:</span> понеділок, вівторок<br>
-            Каса припиняє роботу за 1 годину до закриття музею
-          </p>
-        </nav>
+          </nav>
+          <nav class="menu__schedule">
+            <div class="menu__schedule-main">
+              <p class="menu__schedule-title">Графік роботи</p>
+              <ul class="menu__list menu__list--schedule">
+                <li class="menu__item"><span class="menu__bold">12:00— 20:00</span> середа</li>
+                <li class="menu__item"><span class="menu__bold">12:00— 20:00</span> четвер</li>
+                <li class="menu__item"><span class="menu__bold">12:00 — 20:00</span> п’ятниця</li>
+                <li class="menu__item"><span class="menu__bold">11:00 — 19:00</span> субота</li>
+                <li class="menu__item"><span class="menu__bold">11:00 — 19:00</span>неділя</li>
+              </ul>
+            </div>
+            <p class="menu__day-off">
+              <span class="menu__bold">Вихідні:</span> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </nav>
+        </div>
       </div>
     </aside>
 
