disable scroll when menu is opened, fix buttons

--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
               type="text"
               class="subscribe__input title-font"
             >
-            <button type="submit" class="subscribe__button title-font"></button>
+            <button type="submit" class="subscribe__button"></button>
           </form>
         </div>
       </section>
